--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-      name="viewport"
-    />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
-    <link
-      href="/apple-touch-icon-180x180.png"
-      rel="apple-touch-icon"
-      sizes="180x180"
-    />
-    <link color="#1A1A1A" href="/mask-icon.svg" rel="mask-icon" />
-    <title>Nova Next</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/src/main.ts" type="module"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
